# python-jenkins-pipeline

./: Jenkinsfile  README.md  fastapi-jenkins.service  main.py  pyproject.toml
